// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagDropdownItem renders as expected with a magnifying-glass icon 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--has-left-icon lab-tag--pale"
  disabled={false}
  id="Test render TagDropdownItem with magnifying-glass icon"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex="0"
  type="button"
  value=""
>
  <span
    className="lab-icon lab-icon--magnifying-glass lab-icon--black-75 lab-icon--petit lab-tag--left-icon"
  />
  Test render TagDropdownItem with magnifying-glass icon
</button>
`;

exports[`TagDropdownItem renders as expected with a purple color 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--purple-pale"
  disabled={false}
  id="Test render purple TagDropdownItem"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex="0"
  type="button"
  value=""
>
  Test render purple TagDropdownItem
</button>
`;

exports[`TagDropdownItem renders as expected with a thumb 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--has-thumb lab-tag--pale"
  disabled={false}
  id="Test render TagDropdownItem with thumb"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex="0"
  type="button"
  value=""
>
  <img
    alt=""
    className="lab-tag__thumb"
    src="fake-thumb"
  />
  Test render TagDropdownItem with thumb
</button>
`;

exports[`TagDropdownItem renders as expected with a vivid skin 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--vivid"
  disabled={false}
  id="Test render vivid TagDropdownItem"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex="0"
  type="button"
  value=""
>
  Test render vivid TagDropdownItem
</button>
`;

exports[`TagDropdownItem renders as expected with outline as true 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--outline lab-tag--pale"
  disabled={false}
  id="Test render outline TagDropdownItem"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex="0"
  type="button"
  value=""
>
  Test render outline TagDropdownItem
</button>
`;

exports[`TagDropdownItem renders with base props 1`] = `
<button
  aria-selected={false}
  className="lab-tag lab-tag--togglable lab-tag--pale"
  disabled={false}
  id="Test render TagDropdownItem"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="option"
  tabIndex="0"
  type="button"
  value=""
>
  Test render TagDropdownItem
</button>
`;
